samples/_failures_safe/1761629342_3231a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97737604.c: In function ‘main’:
./samples/SAFE/__tmp_97737604.c:140:5: error: expected declaration or statement at end of input
  140 |     } else {
      |     ^
./samples/SAFE/__tmp_97737604.c:140:5: error: expected declaration or statement at end of input
